# echo-hub

./: .dockerignore  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
db/: README.md
db/migrations/: 20250306174627_init.down.sql  20250306174627_init.up.sql
docker/: Dockerfile.asr-api  Dockerfile.nlp-api  Dockerfile.nlp-worker  Dockerfile.stt-worker
echo_hub_tests/: conftest.py  const.py  utils.py
echo_hub_tests/test_nlp_api/: test_common.py  test_http_mode.py  test_queue_mode.py  test_speech_to_text.py  test_speech_to_text_task.py
migrations/: init.sql
tests/: conftest.py
tests/test_nlp_api/: test_common.py  test_http_mode.py
