[project]
name = "echo-hub"
version = "0.1.0"
description = "echo-hub workspace"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.uv.workspace]
members = ["packages/*"]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.4",
    "ruff>=0.9.6",
]

[tool.mypy]
python_version = "3.11"
plugins = ['pydantic.mypy']

[[tool.mypy.overrides]]
module = ["asyncpg", "faster_whisper"]
follow_untyped_imports = true
